# RL-NBV

./: README.md  benchmark.py  custom_callback.py  generate_replay_buffer.py  ig_proxy.py  requirements.txt  run_benchmark.sh  run_generate_replay_buffer.sh  run_train.sh  train.py
data/complex_shaped_object/: intrinsics.txt
data/complex_shaped_object/armadillo/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  3.pcd  30.pcd  31.pcd  32.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd  model.pcd
data/complex_shaped_object/bunny/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  3.pcd  30.pcd  31.pcd  32.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd  model.pcd
data/complex_shaped_object/bust/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  3.pcd  30.pcd  31.pcd  32.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd  model.pcd
data/complex_shaped_object/column/: 0.pcd  1.pcd  10.pcd  (+31 more)
envs/: rl_nbv_env.py  shapenet_reader.py
models/: pc_nbv.py  pointnet2_cls_ssg.py
tools/render/: check_render_rlt.py  generate_render_exr.py  generate_render_pcd.py  generate_viewspace_poses.py  poses.txt  run.sh  run_check_rlt.sh
tools/sample/: CMakeLists.txt  generate_ground_truth.py  run.sh
(+1103 files in other folders)
